fix: se arreglo la visualizacion del background  y de container + personalizacion de scrollbar + card-dash class +refactor

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,21 +1,13 @@
-html {
-	scroll-behavior: smooth;
-/* 	width: 100%; 
-	height: 100%; 
-	min-width: 320px;
-	min-height: 100vh; */
-	
-}
-
+html,
 body {
-    margin: 0;
-	display: flexbox;
-	place-items: center;
+	height: 100%;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	scroll-behavior: smooth;
 	min-width: 320px;
 	min-height: 100vh;
-	width: 100%; 
-	height: 100%; 
-	
+	place-items: center;
 }
 
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
@@ -26,7 +18,6 @@ body {
 	line-height: 24px;
 	font-weight: 400;
 	color-scheme: light dark;
-
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -36,24 +27,54 @@ body {
 
 #root {
 	height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-	text-align: center;
 	background-color: #36616c;
-	/*  #222d2d  */
-	background-size: cover;
-	background-attachment: fixed;
+	position: relative;
+	text-align: center;
+	// justify-content: center;
+	// align-items: center;
+}
+
+.container-main {
+	background: linear-gradient(0deg, #f8f9fade, #f8f9faf7);
+	// margin: 20px;
+	width: calc(100% - 36px);
+	height: calc(100% - 36px);
+	overflow-y: auto;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	padding-top: 50px;
+	overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+	scrollbar-width: 6px;
+	width: .45rem;
+	// max-height: 50%; 
+	// height: 50%;
+}
+
+::-webkit-scrollbar-thumb {
+	background: linear-gradient(125deg, #d6d2c9, #d1c6ad);
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: linear-gradient(125deg, #8bb5bb, #8bb5bb);
+}
+
+::-webkit-scrollbar-track {
+	background: transparent;
 }
 
 .navbar .diff-arrow {
 	color: #fff;
-	background-color: rgba(146, 189, 197);
+	background-color: rgb(146, 189, 197);
 }
 
-.f-modal{
+.f-modal {
 	margin-inline: 1em;
-	
 }
 
 .listcheck {
@@ -67,7 +88,7 @@ body {
 .text-active {
 	background-color: rgba(146, 189, 197, 0.877);
 	border-radius: 3ch;
-	padding: 0.5mm ;
+	padding: 0.5mm;
 	padding-inline: 3mm;
 	justify-content: center;
 	align-items: center;
@@ -76,18 +97,15 @@ body {
 .text-inactive {
 	background-color: rgb(187, 179, 169);
 	border-radius: 3ch;
-	padding: 0.5mm ;
+	padding: 0.5mm;
 	padding-inline: 2mm;
 	justify-content: center;
 	align-items: center;
 }
 
-.container-main {
-	background: linear-gradient(0deg, #f8f9fade, #f8f9faf7);
-	margin-inline: 20px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-
+.dash-padding {
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 .card {
@@ -95,7 +113,19 @@ body {
 	padding: 1em;
 	margin: 1em;
 	box-shadow: 0 0.125rem 0.25rem rgba($black, 0.075);
+}
 
+.row-dash {
+	padding: 1em;
+}
+
+.card-dash {
+	border: none;
+	padding: 1em;
+	margin: 5px;
+	border-radius: 7px;
+	background: linear-gradient(125deg, #f8f9fa, #f8f9fa);
+	box-shadow: 0 0.225rem 0.25rem rgba($black, 0.075);
 }
 
 .card-form {
@@ -107,11 +137,11 @@ body {
 	box-shadow: 0 0.25rem 0.35rem rgba(14, 21, 24, 0.075);
 }
 
-.show-form{
-	display:none;
+.show-form {
+	display: none;
 }
 
-.action{
+.action {
 	display: inline;
 }
 
@@ -119,12 +149,12 @@ body {
 	border-radius: 5px;
 }
 
-.wizard-form{
+.wizard-form {
 	background-color: transparent;
 	border: none;
 }
 
-.btn{
+.btn {
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
@@ -143,7 +173,6 @@ body {
 		border-radius: 5px;
 		opacity: 0.8;
 		font-size: 1.9rem;
-		
 	}
 }
 
@@ -159,13 +188,14 @@ body {
 	&:hover {
 		color: #f3f3f3;
 		border-radius: 5px;
-		background: radial-gradient( #a09570d2, #a08a41ea);
+		background: radial-gradient(#a09570d2, #a08a41ea);
 		transition: 0.2s all;
 		box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.17);
 	}
 }
 
-.export-btn, .prop-btn{
+.export-btn,
+.prop-btn {
 	width: 6rem;
 	height: 2.5rem;
 	display: flex;
@@ -182,7 +212,7 @@ body {
 	}
 }
 
-.prop-btn{
+.prop-btn {
 	width: 11rem;
 }
 
@@ -257,83 +287,85 @@ body {
 	width: auto;
 }
 
-.searchbar{
+.searchbar {
 	display: inline-flex;
 }
-    .search_input{
-    border: 0;
-    background: none;
-    width: 0;
-    border-radius: 15px;
-    line-height: 40px;
-    transition: width 0.4s linear;
-    }
 
-    .searchbar:hover > .search_input{
-    padding: 0 10px;
-    width: 400px;
-    transition: width 0.4s linear;
-	box-shadow: 0 1px 3px 0 rgba(36, 60, 61, 0.17);
-    }
-
-	.search_input:focus{
+.search_input {
 	border: 0;
-    background: none;
-    width: 400px;
-	box-shadow: 0 1px 3px 0 rgba(36, 60, 61, 0.17);
-	}
-
-	.searchbar:hover > .search_icon{
-	box-shadow: none;
-	}
-
-    .search_icon{
-    height: 40px;
-    width: 40px;
-    float: right;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    color: #36616c;
-	box-shadow: 0 3px 5px 0 rgba(36, 60, 61, 0.17);
-    text-decoration:none;
-    }
-	
-		
-	h1 {
-		font-size: 2.5em;
-		line-height: 1.1;
-	}
-	
-	h2 {
-		font-size: 2em;
-		line-height: 1.1;
-		color: #a08a41dd;
-	}
-	
-	h3 {
-		font-size: 1.5em;
-		line-height: 1.1;
-	}
-	
-	h4 {
-		font-size: 1em;
-		line-height: 1.1;
-	}
-	h6 {
-		font-size: 1em;
-		line-height: 1.1;
-		font-weight: 300;
-	}
-	
-	p {
-		font-size: 1em;
-	}
-
-.react-confirm-alert-overlay {
-  background-color: rgba(117, 114, 114, 0.5)!important;
+	background: none;
+	width: 0;
+	border-radius: 15px;
+	line-height: 40px;
+	transition: width 0.4s linear;
 }
 
+.searchbar:hover > .search_input {
+	padding: 0 10px;
+	width: 400px;
+	transition: width 0.4s linear;
+	box-shadow: 0 1px 3px 0 rgba(36, 60, 61, 0.17);
+}
 
-  
+.search_input:focus {
+	border: 0;
+	background: none;
+	width: 400px;
+	box-shadow: 0 1px 3px 0 rgba(36, 60, 61, 0.17);
+}
+
+.searchbar:hover > .search_icon {
+	box-shadow: none;
+}
+
+.search_icon {
+	height: 40px;
+	width: 40px;
+	float: right;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	color: #36616c;
+	box-shadow: 0 3px 5px 0 rgba(36, 60, 61, 0.17);
+	text-decoration: none;
+}
+
+h1 {
+	font-size: 2.5em;
+	line-height: 1.1;
+}
+
+h2 {
+	font-size: 2em;
+	line-height: 1.1;
+	color: #a08a41dd;
+}
+
+h3 {
+	font-size: 1.5em;
+	line-height: 1.1;
+}
+
+h4 {
+	font-size: 1em;
+	line-height: 1.1;
+}
+h5 {
+	font-size: 1.4em;
+	line-height: 1.1;
+	font-weight: 330;
+}
+h6 {
+	font-size: 1em;
+	line-height: 1.1;
+	font-weight: 300;
+}
+
+p {
+	font-size: 1em;
+}
+
+.react-confirm-alert-overlay {
+	background-color: rgba(117, 114, 114, 0.5) !important;
+}
